# kana

./: Cargo.toml
.cargo/: config.toml
src/: bot.rs  main.rs
src/bot/: commands.rs
src/bot/commands/: music.rs  ping.rs
src/bot/commands/music/: leave.rs  play.rs  skip.rs
