[package]
name = "kana"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
fern = { version = "0.6.1", features = ["chrono", "colored"] }
log = "0.4.17"
serde = "1.0.147"
serde_json = "1.0.87"
serenity = "0.11.5"
shadow-rs = "0.17.1"
tokio = { version = "1.21.2", features = ["full"] }
songbird = { version = "0.3.0" }
sled = "0.34.7"

[build-dependencies]
shadow-rs = "0.17.1"
